Styling : Dashboard header, main, and sidebar, Champs index, Tournament index

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -46,3 +46,8 @@
 .navbar .form-control {
   padding: .75rem 1rem;
 }
+
+.nav-link:hover {
+  background-color: #f0f0f0;
+  transition: background-color 0.2s;
+}
